updated developers grid. Missing fonts

--- a/Developers.html
+++ b/Developers.html
@@ -30,14 +30,208 @@
 				</a>
 			</nav>
 		</header>
-		<section class="box--flex box developerout">
-			<article class=" box box--one-fourth box--flex">
-				<article class="box picture"></article>
+		<section class="box--flex box developerout poloroid grey-background">
+			<article class=" box box--one-fourth box--flex flex-direction poloroid">
+				<article class="box picture center-text">280 x 280</article>
+				<article>Some Person</article>
+					<ul class="clearfix tag-element">
+							<li class="box--float-left"><a href="#">HTML</a></li>
+							<li class="box--float-left"><a href="#">CSS</a></li>
+							<li class="box--float-left"><a href="#">JS</a></li>
+					</ul>
+				<div class="button hero-button">Contact</div>
 			</article>
-			<article class=" box box--one-fourth"></article>
-			<article class=" box box--one-fourth"></article>
-			<article class=" box box--one-fourth"></article>
-			
+			<article class=" box box--one-fourth box--flex flex-direction poloroid">
+				<article class="box picture center-text">280 x 280</article>
+				<article>Some Person</article>
+					<ul class="clearfix tag-element">
+							<li class="box--float-left"><a href="#">HTML</a></li>
+							<li class="box--float-left"><a href="#">CSS</a></li>
+							<li class="box--float-left"><a href="#">JS</a></li>
+					</ul>
+				<div class="button hero-button">Contact</div>
+			</article><article class=" box box--one-fourth box--flex flex-direction poloroid">
+				<article class="box picture center-text">280 x 280</article>
+				<article>Some Person</article>
+					<ul class="clearfix tag-element">
+							<li class="box--float-left"><a href="#">HTML</a></li>
+							<li class="box--float-left"><a href="#">CSS</a></li>
+							<li class="box--float-left"><a href="#">JS</a></li>
+					</ul>
+				<div class="button hero-button">Contact</div>
+			</article><article class=" box box--one-fourth box--flex flex-direction poloroid">
+				<article class="box picture center-text">280 x 280</article>
+				<article>Some Person</article>
+					<ul class="clearfix tag-element">
+							<li class="box--float-left"><a href="#">HTML</a></li>
+							<li class="box--float-left"><a href="#">CSS</a></li>
+							<li class="box--float-left"><a href="#">JS</a></li>
+					</ul>
+				<div class="button hero-button">Contact</div>
+			</article>
 		</section>
+		<section class="box--flex box developerout poloroid grey-background">
+			<article class=" box box--one-fourth box--flex flex-direction poloroid">
+				<article class="box picture center-text">280 x 280</article>
+				<article>Some Person</article>
+					<ul class="clearfix tag-element">
+							<li class="box--float-left"><a href="#">HTML</a></li>
+							<li class="box--float-left"><a href="#">CSS</a></li>
+							<li class="box--float-left"><a href="#">JS</a></li>
+					</ul>
+				<div class="button hero-button">Contact</div>
+			</article>
+			<article class=" box box--one-fourth box--flex flex-direction poloroid">
+				<article class="box picture center-text">280 x 280</article>
+				<article>Some Person</article>
+					<ul class="clearfix tag-element">
+							<li class="box--float-left"><a href="#">HTML</a></li>
+							<li class="box--float-left"><a href="#">CSS</a></li>
+							<li class="box--float-left"><a href="#">JS</a></li>
+					</ul>
+				<div class="button hero-button">Contact</div>
+			</article><article class=" box box--one-fourth box--flex flex-direction poloroid">
+				<article class="box picture center-text">280 x 280</article>
+				<article>Some Person</article>
+					<ul class="clearfix tag-element">
+							<li class="box--float-left"><a href="#">HTML</a></li>
+							<li class="box--float-left"><a href="#">CSS</a></li>
+							<li class="box--float-left"><a href="#">JS</a></li>
+					</ul>
+				<div class="button hero-button">Contact</div>
+			</article><article class=" box box--one-fourth box--flex flex-direction poloroid">
+				<article class="box picture center-text">280 x 280</article>
+				<article>Some Person</article>
+					<ul class="clearfix tag-element">
+							<li class="box--float-left"><a href="#">HTML</a></li>
+							<li class="box--float-left"><a href="#">CSS</a></li>
+							<li class="box--float-left"><a href="#">JS</a></li>
+					</ul>
+				<div class="button hero-button">Contact</div>
+			</article>
+		</section>
+		<section class="box--flex box developerout poloroid grey-background">
+			<article class=" box box--one-fourth box--flex flex-direction poloroid">
+				<article class="box picture center-text">280 x 280</article>
+				<article>Some Person</article>
+					<ul class="clearfix tag-element">
+							<li class="box--float-left"><a href="#">HTML</a></li>
+							<li class="box--float-left"><a href="#">CSS</a></li>
+							<li class="box--float-left"><a href="#">JS</a></li>
+					</ul>
+				<div class="button hero-button">Contact</div>
+			</article>
+			<article class=" box box--one-fourth box--flex flex-direction poloroid">
+				<article class="box picture center-text">280 x 280</article>
+				<article>Some Person</article>
+					<ul class="clearfix tag-element">
+							<li class="box--float-left"><a href="#">HTML</a></li>
+							<li class="box--float-left"><a href="#">CSS</a></li>
+							<li class="box--float-left"><a href="#">JS</a></li>
+					</ul>
+				<div class="button hero-button">Contact</div>
+			</article><article class=" box box--one-fourth box--flex flex-direction poloroid">
+				<article class="box picture center-text">280 x 280</article>
+				<article>Some Person</article>
+					<ul class="clearfix tag-element">
+							<li class="box--float-left"><a href="#">HTML</a></li>
+							<li class="box--float-left"><a href="#">CSS</a></li>
+							<li class="box--float-left"><a href="#">JS</a></li>
+					</ul>
+				<div class="button hero-button">Contact</div>
+			</article><article class=" box box--one-fourth box--flex flex-direction poloroid">
+				<article class="box picture center-text">280 x 280</article>
+				<article>Some Person</article>
+					<ul class="clearfix tag-element">
+							<li class="box--float-left"><a href="#">HTML</a></li>
+							<li class="box--float-left"><a href="#">CSS</a></li>
+							<li class="box--float-left"><a href="#">JS</a></li>
+					</ul>
+				<div class="button hero-button">Contact</div>
+			</article>
+		</section>
+		<section class="box--flex box developerout poloroid grey-background">
+			<article class=" box box--one-fourth box--flex flex-direction poloroid">
+				<article class="box picture center-text">280 x 280</article>
+				<article>Some Person</article>
+					<ul class="clearfix tag-element">
+							<li class="box--float-left"><a href="#">HTML</a></li>
+							<li class="box--float-left"><a href="#">CSS</a></li>
+							<li class="box--float-left"><a href="#">JS</a></li>
+					</ul>
+				<div class="button hero-button">Contact</div>
+			</article>
+			<article class=" box box--one-fourth box--flex flex-direction poloroid">
+				<article class="box picture center-text">280 x 280</article>
+				<article>Some Person</article>
+					<ul class="clearfix tag-element">
+							<li class="box--float-left"><a href="#">HTML</a></li>
+							<li class="box--float-left"><a href="#">CSS</a></li>
+							<li class="box--float-left"><a href="#">JS</a></li>
+					</ul>
+				<div class="button hero-button">Contact</div>
+			</article><article class=" box box--one-fourth box--flex flex-direction poloroid">
+				<article class="box picture center-text">280 x 280</article>
+				<article>Some Person</article>
+					<ul class="clearfix tag-element">
+							<li class="box--float-left"><a href="#">HTML</a></li>
+							<li class="box--float-left"><a href="#">CSS</a></li>
+							<li class="box--float-left"><a href="#">JS</a></li>
+					</ul>
+				<div class="button hero-button">Contact</div>
+			</article><article class=" box box--one-fourth box--flex flex-direction poloroid">
+				<article class="box picture center-text">280 x 280</article>
+				<article>Some Person</article>
+					<ul class="clearfix tag-element">
+							<li class="box--float-left"><a href="#">HTML</a></li>
+							<li class="box--float-left"><a href="#">CSS</a></li>
+							<li class="box--float-left"><a href="#">JS</a></li>
+					</ul>
+				<div class="button hero-button">Contact</div>
+			</article>
+		</section>
+		<section class="box--flex box developerout poloroid grey-background">
+			<article class=" box box--one-fourth box--flex flex-direction poloroid">
+				<article class="box picture center-text">280 x 280</article>
+				<article>Some Person</article>
+					<ul class="clearfix tag-element">
+							<li class="box--float-left"><a href="#">HTML</a></li>
+							<li class="box--float-left"><a href="#">CSS</a></li>
+							<li class="box--float-left"><a href="#">JS</a></li>
+					</ul>
+				<div class="button hero-button">Contact</div>
+			</article>
+			<article class=" box box--one-fourth box--flex flex-direction poloroid">
+				<article class="box picture center-text">280 x 280</article>
+				<article>Some Person</article>
+					<ul class="clearfix tag-element">
+							<li class="box--float-left"><a href="#">HTML</a></li>
+							<li class="box--float-left"><a href="#">CSS</a></li>
+							<li class="box--float-left"><a href="#">JS</a></li>
+					</ul>
+				<div class="button hero-button">Contact</div>
+			</article><article class=" box box--one-fourth box--flex flex-direction poloroid">
+				<article class="box picture center-text">280 x 280</article>
+				<article>Some Person</article>
+					<ul class="clearfix tag-element">
+							<li class="box--float-left"><a href="#">HTML</a></li>
+							<li class="box--float-left"><a href="#">CSS</a></li>
+							<li class="box--float-left"><a href="#">JS</a></li>
+					</ul>
+				<div class="button hero-button">Contact</div>
+			</article><article class=" box box--one-fourth box--flex flex-direction poloroid">
+				<article class="box picture center-text">280 x 280</article>
+				<article>Some Person</article>
+					<ul class="clearfix tag-element">
+							<li class="box--float-left"><a href="#">HTML</a></li>
+							<li class="box--float-left"><a href="#">CSS</a></li>
+							<li class="box--float-left"><a href="#">JS</a></li>
+					</ul>
+				<div class="button hero-button">Contact</div>
+			</article>
+		</section>
+		<footer>
+			<h3 class="footer white-text">© 2013 Startup Matchmaker. Made in NY.</h3>
+		</footer>
 	</body>
 </html>
