--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 				Startup Matchmaker
 			</h1>
 			<nav class="box box--float-right clearfix">
-				<a href="#" class="box navimpt">
+				<a href="https://elizabethnair.github.io/StartUp-Matchmaker-/Developers.html" class="box navimpt">
 					Developers
 				</a>
 				<a href="#" class="box navimpt">
