--- a/Developers.html
+++ b/Developers.html
@@ -9,9 +9,10 @@
 	</head>
 	<body>
 		<header class="box clearfix header nav">
-			<h1 class="box box--float-left logo">
+			<h1>
+			<a href="https://elizabethnair.github.io/StartUp-Matchmaker-/index.html" class="box box--float-left logo"> 
 				Startup Matchmaker
-			</h1>
+			</h1></a>
 			<nav class="box box--float-right clearfix">
 				<a href="#" class="box navimpt">
 					Developers
